compare change then update

--- a/test.ipynb
+++ b/test.ipynb
@@ -9,225 +9,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-08-30 23:34:10.308\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mupdate\u001b[0m:\u001b[36mload_settings\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mConfig loaded from: ./config/account.json\u001b[0m\n",
-      "\u001b[32m2025-08-30 23:34:10.914\u001b[0m | \u001b[32m\u001b[1mSUCCESS \u001b[0m | \u001b[36mupdate\u001b[0m:\u001b[36mget_token\u001b[0m:\u001b[36m105\u001b[0m - \u001b[32m\u001b[1mLogin successful!\u001b[0m\n"
+      "\u001b[32m2025-09-23 22:42:28.815\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mupdate\u001b[0m:\u001b[36mload_settings\u001b[0m:\u001b[36m39\u001b[0m - \u001b[1mConfig loaded from: ./config/account.json\u001b[0m\n",
+      "\u001b[32m2025-09-23 22:42:30.833\u001b[0m | \u001b[32m\u001b[1mSUCCESS \u001b[0m | \u001b[36mupdate\u001b[0m:\u001b[36mrefresh\u001b[0m:\u001b[36m88\u001b[0m - \u001b[32m\u001b[1mToken refreshed\u001b[0m\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'status': 1,\n",
-       " 'data': [{'id': '68a2e91f58e4d338acf2b949',\n",
-       "   'version': 2,\n",
-       "   'uuid': '500b7ac4-eefa-402b-9980-04c2f1d67858',\n",
-       "   'color': None,\n",
-       "   'size': None,\n",
-       "   'option1': 'mainland_field_1',\n",
-       "   'option2': 'mainland_field_2',\n",
-       "   'option3': None,\n",
-       "   'barcodes': [],\n",
-       "   'weight': 0.21,\n",
-       "   'additional': {'hktv': {'stores': 'HKTV_S0000106360',\n",
-       "     'visibility': 'Y',\n",
-       "     'currency': 'RMB',\n",
-       "     'cost': None,\n",
-       "     'style': None,\n",
-       "     'urgent': None,\n",
-       "     'warranty': None,\n",
-       "     'storefront_store_code': 'C0889001',\n",
-       "     'contract_no': 455272,\n",
-       "     'product_ready_method': 'MLC',\n",
-       "     'delivery_method': 'hktv-standard-delivery',\n",
-       "     'store_sku_id': 'C0889001_S_77224888',\n",
-       "     'product_type_code': ['AA22801000001'],\n",
-       "     'primary_category': {'category_code': 'AA22801000001',\n",
-       "      'category_name': 'Sunglasses',\n",
-       "      'category_name_schi': '太阳镜',\n",
-       "      'category_name_tchi': '太陽眼鏡'},\n",
-       "     'root_category': {'category_code': 'AA22000000000',\n",
-       "      'category_name': \"Women's Fashion\",\n",
-       "      'category_name_schi': '女士服饰',\n",
-       "      'category_name_tchi': '女士服飾'},\n",
-       "     'is_primary_sku': 'N',\n",
-       "     'sku_short_description_en': 'Lens Material: PC  \\nFrame Material: Plastic + Metal  \\n',\n",
-       "     'sku_short_description_ch': '鏡片材料:PC\\n鏡架材料:塑料+金屬\\n',\n",
-       "     'sku_short_description_sc': '镜片材料:PC\\n镜架材料:塑料+金属\\n',\n",
-       "     'sku_long_description_en': 'Transmittance Classification: Category 2 / Sunglasses  \\nPolarized: No  \\nEyewear Structure: Full Frame  \\nStyle: Polygonal  \\nUV Resistance Level: UV400  \\nApplicable Scenario: Sun Protection  \\nTrend Element: Internet Hit  \\nStyle: Casual  \\nTarget Audience: Women  \\nOEM: Available  \\nLogo Printing: Available\\n',\n",
-       "     'sku_long_description_ch': '透射比分類:2類/遮陽鏡\\n是否偏光:否\\n眼鏡結構:全框\\n眼鏡款式:多邊形\\n抗UV等級:UV400\\n適用場景:防曬\\n流行元素:網紅爆款\\n風格:休閒\\n適用人群:女士\\nOEM:可以\\n加印logo:可以\\n\\n',\n",
-       "     'sku_long_description_sc': '透射比分类:2类/遮阳镜\\n是否偏光:否\\n眼镜结构:全框\\n眼镜款式:多边形\\n抗UV等级:UV400\\n适用场景:防晒\\n流行元素:网红爆款\\n风格:休闲\\n适用人群:女士\\nOEM:可以\\n加印logo:可以\\n\\n',\n",
-       "     'feature_start_time': None,\n",
-       "     'feature_end_time': None,\n",
-       "     'voucher_type': None,\n",
-       "     'voucher_display_type': None,\n",
-       "     'expiry_type': None,\n",
-       "     'redeem_start_date': None,\n",
-       "     'voucher_template_type': None,\n",
-       "     'fixed_redemption_date': None,\n",
-       "     'upon_purchase_date': None,\n",
-       "     'fine_print_en': None,\n",
-       "     'fine_print_ch': None,\n",
-       "     'fine_print_sc': None,\n",
-       "     'term_name': None,\n",
-       "     'selling_price': 19.8,\n",
-       "     'discount_text_en': None,\n",
-       "     'discount_text_ch': None,\n",
-       "     'discount_text_sc': None,\n",
-       "     'mall_dollar': 0,\n",
-       "     'vip_mall_dollar': 0,\n",
-       "     'user_max': None,\n",
-       "     'main_photo': 'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/8b1d/8b8d/ab2b/mIgskySXLg20250818164930.jpg',\n",
-       "     'main_video': None,\n",
-       "     'variant_product_photo': ['https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/8102/d88d/4ae6/YwCkBVIpht20250818164931.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/af17/9712/b340/ryUVyRPpfJ20250818164931.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/7fc4/4af6/0cf6/hIuiCVmmzM20250818164931.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/5c9d/38e9/6dd1/hhTHPewmiR20250818164931.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/09af/08d5/3e6d/nfYSJmfDmj20250818164932.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/ef50/cd00/bf6c/hwapLkgdVr20250818164932.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/eef2/16ee/29a9/rXIrkdIWBT20250818164932.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/d89b/521e/a887/OLVQyyVomc20250818164932.jpg'],\n",
-       "     'other_photo': ['https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/0d24/6f82/ffa9/vMuKnqjdqF20250818164932.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/2c1c/e741/4f85/PguwbFOloT20250818164932.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/de24/f717/f701/JVoSpHttyD20250818164932.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/4ae9/22e5/d3b7/LMWymOCUwD20250818164933.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/2fb5/1337/1a8b/xTXupjddBF20250818164933.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/05b5/00ed/b5ba/RCHclNsOMz20250818164933.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/0d72/5c8b/1221/qHTZlsoGWv20250818164933.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/0d7f/d7ba/4c7d/hBxJSrGGFA20250818164933.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/ecf1/17c7/bba6/yOvgHuzFGL20250818164933.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/c6d3/6dec/6f3d/NUxLpmqUIn20250818164933.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/101b/bd67/241b/JRjyNJBTeD20250818164933.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/48e3/f0a2/7cb0/ufzHcBDmKY20250818164933.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/7f6f/08a7/d9c3/dyLpEdnOJx20250818164934.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/d142/22e6/32c6/MKAKdtQVvX20250818164934.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/e74a/0204/0461/XfrNAnQuWv20250818164934.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/59e8/2b74/1483/VXvOBCFOvS20250818164934.jpg',\n",
-       "      'https://cdn-media.hktvmall.com/hktv-mms/HKTV/mms/uploadProductImage/bf6b/6ddb/26d2/XwJPkvnhiY20250818164934.jpg'],\n",
-       "     'advertising_photo': None,\n",
-       "     'video_link': None,\n",
-       "     'video_link_text_en': None,\n",
-       "     'video_link_text_ch': None,\n",
-       "     'video_link_text_sc': None,\n",
-       "     'video_link2': None,\n",
-       "     'video_link_text_en2': None,\n",
-       "     'video_link_text_ch2': None,\n",
-       "     'video_link_text_sc2': None,\n",
-       "     'video_link3': None,\n",
-       "     'video_link_text_en3': None,\n",
-       "     'video_link_text_ch3': None,\n",
-       "     'video_link_text_sc3': None,\n",
-       "     'video_link4': None,\n",
-       "     'video_link_text_en4': None,\n",
-       "     'video_link_text_ch4': None,\n",
-       "     'video_link_text_sc4': None,\n",
-       "     'video_link5': None,\n",
-       "     'video_link_text_en5': None,\n",
-       "     'video_link_text_ch5': None,\n",
-       "     'video_link_text_sc5': None,\n",
-       "     'warehouse_id': 159112,\n",
-       "     'warehouse_code': None,\n",
-       "     'packing_spec_en': None,\n",
-       "     'packing_spec_ch': None,\n",
-       "     'packing_spec_sc': None,\n",
-       "     'invoice_remarks_en': None,\n",
-       "     'invoice_remarks_ch': None,\n",
-       "     'invoice_remarks_sc': None,\n",
-       "     'return_days': 7,\n",
-       "     'product_ready_days': '5',\n",
-       "     'pickup_days': 'MSU',\n",
-       "     'pickup_timeslot': 'AM/PM/EV',\n",
-       "     'need_removal_services': None,\n",
-       "     'goods_type': None,\n",
-       "     'warranty_period_unit': None,\n",
-       "     'warranty_period': None,\n",
-       "     'warranty_supplier_en': None,\n",
-       "     'warranty_supplier_ch': None,\n",
-       "     'warranty_supplier_sc': None,\n",
-       "     'service_centre_address_en': None,\n",
-       "     'service_centre_address_ch': None,\n",
-       "     'service_centre_address_sc': None,\n",
-       "     'service_centre_email': None,\n",
-       "     'service_centre_contact': None,\n",
-       "     'warranty_remark_en': None,\n",
-       "     'warranty_remark_ch': None,\n",
-       "     'warranty_remark_sc': None,\n",
-       "     'online_status': 'ONLINE',\n",
-       "     'rm_code': None,\n",
-       "     'virtual_store': None,\n",
-       "     'presell_fruit': None,\n",
-       "     'physical_store': None,\n",
-       "     'thumbnail_video': None,\n",
-       "     'storage_type': None,\n",
-       "     'commission_rate': 100.0,\n",
-       "     'store_id': None,\n",
-       "     'video_filename': None,\n",
-       "     'delivery_district': None,\n",
-       "     'offline_due_to_rollback': None,\n",
-       "     'status': None,\n",
-       "     'affiliate_url': None,\n",
-       "     'extended_warranty_percentage_setting': None,\n",
-       "     'claim_link_en': None,\n",
-       "     'claim_link_ch': None,\n",
-       "     'claim_link_sc': None,\n",
-       "     'bind_extended_warranty_store_sku_ids': None,\n",
-       "     'hasEditing': None,\n",
-       "     'bundle_setting': None,\n",
-       "     'partner_info': None,\n",
-       "     'external_platform': {'source': ['TMALL'],\n",
-       "      'product_id': '797016774341',\n",
-       "      'sku_id': None},\n",
-       "     'skuCode': False},\n",
-       "    'iids': {'mall_detail': [{'mall': 'hktv',\n",
-       "       'storefront_store_code': 'C0889001',\n",
-       "       'store_sku_id': 'C0889001_S_77224888',\n",
-       "       'stock_status': None}],\n",
-       "     'warehouse_detail': [{'mall': ['hktv'], 'warehouse_seq_no': '70'},\n",
-       "      {'mall': [], 'warehouse_seq_no': '71'},\n",
-       "      {'mall': [], 'warehouse_seq_no': '72'},\n",
-       "      {'mall': [], 'warehouse_seq_no': '73'},\n",
-       "      {'mall': [], 'warehouse_seq_no': '98'}]},\n",
-       "    'little_mall': None},\n",
-       "   'create_time': '2025-08-18T16:49:36',\n",
-       "   'create_user': 'OpenAPI-C0889001',\n",
-       "   'modified_time': '2025-08-28T15:24:17',\n",
-       "   'modified_user': 'system',\n",
-       "   'brand_id': 458362,\n",
-       "   'merchant_id': 42615,\n",
-       "   'sku_id': '77224888',\n",
-       "   'manufactured_country': 'CN/HK',\n",
-       "   'colour_families': None,\n",
-       "   'size_system': None,\n",
-       "   'option1_value': 'ML_8e2376d2-4ba2-476f-a861-92609654f42f',\n",
-       "   'option2_value': 'ML_66de422a-dfdc-4f47-a948-963c1ef668b2',\n",
-       "   'option3_value': None,\n",
-       "   'packing_height': 11,\n",
-       "   'packing_length': 17,\n",
-       "   'packing_depth': 9,\n",
-       "   'packing_dimension_unit': 'cm',\n",
-       "   'weight_unit': 'kg',\n",
-       "   'storage_temperature': 'AIRCON',\n",
-       "   'packing_box_type': 'S',\n",
-       "   'original_price': 28.3,\n",
-       "   'product_id': '6272135',\n",
-       "   'minimum_shelf_life': None,\n",
-       "   'merchant_name': 'HKTV THE MARKET',\n",
-       "   'sku_name_en': \"Same Style GM Women's Sunglasses Recommended UV Protection Square Frame Metal Leg Sunglasses\",\n",
-       "   'sku_name_ch': '同款gm墨鏡女 博薦防紫外線方形大框金屬腿太陽眼鏡',\n",
-       "   'sku_name_sc': '同款gm墨镜女 博荐防紫外线方形大框金属腿太阳眼镜',\n",
-       "   'applicable_service': None,\n",
-       "   'carton_size': None,\n",
-       "   'bundle_setting': None,\n",
-       "   'mms_create_user': None,\n",
-       "   'mms_create_time': None,\n",
-       "   'mms_modified_user': 'wkpang@hktv.com.hk',\n",
-       "   'mms_modified_time': [2025, 8, 28, 14, 18, 2]}],\n",
-       " 'errorMessageList': None,\n",
-       " 'fail': False,\n",
-       " 'success': True}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -235,31 +19,111 @@
     "\n",
     "api = ProductAPI()\n",
     "\n",
-    "api.search_product(\"C0889001_S_77224888\")"
+    "res = api.search_product(\"C0889001_S_172535475\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "custom_field = {\"return_days\" : 1}\n",
+    "payload = PayloadGenerator.build(res, custom_field=custom_field)\n",
+    "data = res[\"data\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'status': 1, 'data': [{'recordId': 53872444, 'status': 'SUCCESS', 'rows': [{'status': 'SUCCESS', 'uuid': '4ccaa895-da7b-4856-9021-bd5da14169ad', 'skuId': '68080320', 'errorMessage': None}]}], 'errorMessageList': None, 'fail': False, 'success': True}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'additional': {'hktv': {'primary_category_code': 'AA26653000001',\n",
+       "   'return_days': '0'}}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = api.get_update_status(\"53872444\")\n",
-    "print(result)"
+    "payload_data = payload[\"product\"]\n",
+    "\n",
+    "def check_diff(data1, data2, remain_data=None):\n",
+    "    check = data1.copy() if remain_data is None else remain_data\n",
+    "\n",
+    "    for key, value in data1.items():\n",
+    "        if key not in data2:\n",
+    "            continue\n",
+    "            \n",
+    "        if type(value) not in [dict, list] and data1[key] == data2[key]:\n",
+    "            check.pop(key)\n",
+    "\n",
+    "        elif isinstance(value, dict) and isinstance(data2[key], dict):\n",
+    "            check[key] = check_diff(value, data2[key])\n",
+    "            if not check[key]:\n",
+    "                check.pop(key)\n",
+    "        \n",
+    "        elif isinstance(value, list) and isinstance(data2[key], list):\n",
+    "            diff_list = [\n",
+    "                item for item in value if item not in data2[key]\n",
+    "            ]\n",
+    "            if diff_list:\n",
+    "                check[key] = diff_list\n",
+    "            else:\n",
+    "                check.pop(key)\n",
+    "\n",
+    "    return check\n",
+    "\n",
+    "check_diff(payload_data, data) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from deepdiff import DeepDiff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff = DeepDiff(payload[\"product\"], data, ignore_numeric_type_changes=True, ignore_string_type_changes=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['dictionary_item_added', 'dictionary_item_removed', 'values_changed'])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff.keys()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -273,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.22"
   }
  },
  "nbformat": 4,
